# eDO_control

./: CMakeLists.txt  README.md  package.xml  setup.py  start.bash
cfg/: JointTrajectoryActionServer.cfg  PositionJointTrajectoryActionServer.cfg  VelocityJointTrajectoryActionServer.cfg
launch/: calibrate.launch  control.launch
scripts/: setup_edo.py
src/: calibrate.py  joint_state_publisher.py  joint_trajectory_action_server.py
src/edo/: joint_trajectory_action.py  messages.py  states.py
