<package format="2">

  <name>edo_control</name>
  <version>0.1.0</version>
  <description>
     Standard ROS interface for position control of eDO's joints 
  </description>
  <author email="yoan@aubrune.eu">Yoan Mollard</author>
  <maintainer email="yoan@aubrune.eu">Yoan Mollard</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

</package>
